frontend/test/should_pass/exectype_AssignVAllocToVarUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(i=valloc());
	}
}