frontend/test/should_fail/exectype_AssignSetCreationToVar2.grg
using exectype;

rule r
{
	modify  {
		exec(x:int =set<HH>);
	}
}